--- a/src/app/users-form/users-form.component.html
+++ b/src/app/users-form/users-form.component.html
@@ -1,1 +1,28 @@
-<p>users-form works!</p>
+<div class="form-card">
+  <form [formGroup]="userForm">
+    <div class="form-group">
+      <label for="prenom">prenom</label>
+      <input id="prenom" type="text" formControlName="prenom">
+    </div>
+    <div class="form-group">
+      <label for="nom">Nom</label>
+      <input id="nom" type="text" formControlName="nom">
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input id="email" type="text" formControlName="email">
+    </div>
+    <div class="form-group">
+      <label for="telephone">Telephone</label>
+      <input id="telephone" type="text" formControlName="telephone">
+    </div>
+    <div class="form-group">
+      <label for="date_naissance">Date de naissance</label>
+      <input id="date_naissance" type="date" formControlName="date_naissance">
+    </div>
+    <div class="action-buttons">
+      <button type="submit" (click)="onSubmitForm()">Enregistrer</button>
+    </div>
+  </form>
+
+</div>
