--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,3 +1,4 @@
+<app-cars-form></app-cars-form>
 <div class="cars" *ngFor="let car of carsList">
   <div class="card-cars">
     <h5 class="card-title">{{car.marque}} {{car.modele}}</h5>
